k8s/csp-sandbox/dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: springlab1
spec:
 strategy:
   type: Rolling
   rollingParams:
     updatePeriodSeconds: 1
     intervalSeconds: 1
     timeoutSeconds: 600
     maxUnavailable: 25%
     maxSurge: 25%
 replicas: 1
 test: false
 selector:
  name: springlab1
 template:
  metadata:
   labels:
    name: springlab1
  spec:
   containers:
    -
     name: springlab1
     image: ' '
     ports:
      - containerPort: 8080
        protocol: TCP
     volumeMounts:
      - name: config-volume
        mountPath: /opt/app-root/src/config
     imagePullPolicy: Always
   volumes:
    - name: config-volume
      configMap:
        name: fake-balances
        items:
        - key: application.yml
          path: application.yml
    - name: hawkular-openshift-agent
      configMap:
        name: springlab1-hawkular-config
   restartPolicy: Always
 triggers:
 - imageChangeParams:
    automatic: true
    containerNames:
    - springlab1
    from:
     kind: ImageStreamTag
     name: springlab1:latest
   type: ImageChange
