k8s/csp-sandbox/dcs.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: springlab1
spec:
 strategy:
   type: Rolling
   rollingParams:
     updatePeriodSeconds: 1
     intervalSeconds: 1
     timeoutSeconds: 600
     maxUnavailable: 25%
     maxSurge: 25%
 replicas: 1
 test: false
 selector:
  name: springlab1
 template:
  metadata:
   labels:
    name: springlab1
  spec:
   containers:
    -
     name: springlab1
     image: ' '
     ports:
      - containerPort: 8080
        protocol: TCP
     imagePullPolicy: Always
   restartPolicy: Always
 triggers:
 - imageChangeParams:
    automatic: true
    containerNames:
    - springlab1
    from:
     kind: ImageStreamTag
     name: springlab1:latest
   type: ImageChange
