k8s/csp-sandbox/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springlab1
  labels:
    name: springlab1
spec:
 ports:
  - name: 8080-tcp-proxy
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: management
    protocol: TCP
    port: 9001
    targetPort: 9001
 selector:
  name: springlab1
